[package]
name = "CatalystRustCryptographyFFI"
version = "0.1.0"
authors = ["Fran <fran.sl@atlascity.io> (https://atlascity.io)"]
edition = "2018"

[dependencies]
ed25519-dalek = { version = "1.0.0-pre.1", features = ["serde"] }
curve25519-dalek="^1"
rand="0.6.0"
sha2="0.8"
hex = "^0.3"
bincode = "^0.9"
libc = "^0.2"
error-chain = "0.12.1"
chrono = "0.4.6"
cookie = "0.12.0"
log = "0.4"
fern = "0.5"
reqwest = "0.9.17"
hyper = "0.12.29"
failure = "0.1.5"

[lib]
name = "catalystffi"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 3 
