[package]
name = "CatalystRustCryptographyFFI"
version = "0.1.0"
authors = ["Fran <fran.sl@atlascity.io> (https://atlascity.io)"]
edition = "2018"

[dependencies]
ed25519-dalek = { version = "1.0.0-pre.1", features = ["serde"] }
curve25519-dalek="^1"
rand="0.6.0"
sha2="0.8"
hex = "^0.3"
bincode = "^0.9"
libc = "^0.2"
log = "0.4"
failure = "0.1.5"
merlin = "1.2.0"
bulletproofs = "1.0.4"
lazy_static = "1.4.0"

[lib]
name = "catalystffi"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[profile.dev]
opt-level = 0 
