[package]
name = "CatalystRustCryptographyFFI"
version = "0.1.0"
authors = ["Fran <fran.sl@atlascity.io> (https://atlascity.io)"]
edition = "2018"

[dependencies]
ed25519-dalek = { version = "=1.0.0-pre.1", features = ["serde"] }
rand="0.6.0"
libc = "^0.2"
catalyst-protocol-sdk-rust = "=0.1.3"

[lib]
name = "catalystffi"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[profile.dev]
opt-level = 3 

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
